# med_api_employees

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/authentication/: helpers.py  token.py
src/data_access_layer/: appointments.py  dictionaries.py  employees.py  general.py  patients.py
src/database/: dicts_models.py
src/database/models/: employees.py  patients.py
src/databases/: dicts_models.py  models.py  relational.py
src/databases/models/: employees.py  patients.py
src/models/: appointments.py  dictionaries.py  employees.py  general.py  patients.py
src/routers/: account.py  appointments.py  dictionaries.py  employees.py  patients.py
src/services/: authentication.py  general.py  patients.py  security.py
src/texts/: patients.py
tests/: application_roles.py  conftest.py  data_fixtures.py  test.py
tests/test_api/: test_dictionaries.py  test_employees.py  test_patients.py
