[project]
name = "medapp"
version = "0.0.2"
description = ""
authors = [
    {name = "Eryk Mikołajewicz", email = "eryk.mikolajewicz@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.23.2",
    "pydantic>=2.4.2",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.28.0",
    "motor>=3.3.1",
    "python-multipart>=0.0.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.1",
    "Authlib>=1.2.1",
    "pgadmin4>=7.8",
]

[tool.pdm.scripts]
_.env_file = ".env"
start = {call = "src.main:main"}
test = {cmd = "pytest --tb=long tests/test.py "}
docker_build = {cmd = "docker image build --tag=employees_api ."}
pgadmin = {cmd = "pgadmin4"}
