[project]
name = "medapp"
version = "0.0.5"
description = ""
authors = [
    {name = "Eryk Mikołajewicz", email = "eryk.mikolajewicz@gmail.com"},
]
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "pydantic==2.6.1",
    "sqlalchemy[asyncio]==2.0.27",
    "asyncpg==0.29.0",
    "python-multipart==0.0.9",
    "aiosmtplib==3.0.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
test = [
    "pytest==8.0.1",
    "pytest-asyncio==0.23.5",
    "httpx==0.26.0",
    "Authlib==1.3.0",
]

[tool.pdm.scripts]
_.env_file = ".env"
start = {cmd = """uvicorn src.main:app --host='0.0.0.0' --port=8009 --reload
--ssl-keyfile ./privatekey.pem --ssl-certfile ./certificate.pem"""}
test = {cmd = "pytest --tb=long tests"}
docker_build = {cmd = "docker image build --tag=employees_api ."}
